[WinCairo][CURL] NetworkProcess consumes CPU resource greedily https://bugs.webkit.org/show_bug.cgi?id=214383

Reviewed by Fujii Hironori.

Add PolicyAction::Ignore handling routine in NetworkDataTaskCurl::invokeDidReceiveResponse()
If we don't cancel the ignored requests the worker thread for curl scheduler goes busy-looping because the fds of the requests continue to be monitored.

No tests needed as existing tests cover this change.

* NetworkProcess/curl/NetworkDataTaskCurl.cpp:
(WebKit::NetworkDataTaskCurl::invokeDidReceiveResponse):


Canonical link: https://commits.webkit.org/227233@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264485 268f45cc-cd09-0410-ab3c-d52691b4dbfc